[workspace]
members  = ["raft", "simulator"]
resolver = "3"

[workspace.dependencies]
async-trait = { version = "0.1.89" }
raft        = { path = "raft" }
tokio       = { version = "1.47.1", default-features = false }
rand        = { version = "0.9.2" }
rand_chacha = { version = "0.9.0" }
getrandom   = { version = "0.3.3" }
