[package]
edition = "2024"
name    = "raft"
version = "0.1.0"

[lib]
name = "raft"
path = "lib.rs"

[dependencies]
async-trait  = { workspace = true }
bytes        = { workspace = true }
futures-util = { workspace = true }
parking_lot  =  { workspace = true }
tokio        = { version = "1.47.1", features = ["full"] }
