[package]
name    = "raft-sim"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "main.rs"
name = "raft-sim"

[dependencies]
raft = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "rt",
    "macros",
    "time",
    "parking_lot",
    "tracing",
    "test-util",
] }
rand = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { workspace = true }
